Filter by postType, repair filtering in backend